syntax = "proto3";

package kv;

option go_package = "./proto";

service KV {
  rpc Put (PutRequest) returns (PutResponse);
  rpc Get (GetRequest) returns (GetResponse);
  rpc Delete (DeleteRequest) returns (DeleteResponse);
  rpc List (ListRequest) returns (ListResponse);
}

message PutRequest {
  string key = 1;
  string value = 2;
}

message PutResponse {
  bool ok = 1;
  string error = 2;
}

message GetRequest {
  string key = 1;
}

message GetResponse {
  bool found = 1;
  string value = 2;
  string error = 3;
}

message DeleteRequest {
  string key = 1;
}

message DeleteResponse {
  bool ok = 1;
  string error = 2;
}

message ListRequest {}

message KVPair {
  string key = 1;
  string value = 2;
}

message ListResponse {
  repeated KVPair pairs = 1;
}
